# aagt

./: .gitattributes  .gitignore  API_REFERENCE.md  ARCHITECTURE.md  BUG_REPORT.md  CONFIGURATION.md  CONTRIBUTING.md  Cargo.toml  OPTIMIZATION_ROADMAP.md  README.md  SECURITY.md  bug_repro.index  bug_repro.jsonl  check_output.txt  config.toml.example
.github/: FUNDING.yml
aagt-core/: Cargo.toml  build.rs  test_integration.index  test_integration.jsonl  test_memory.index  test_memory.jsonl  test_memory_exact.index  test_memory_exact.jsonl  test_memory_pruning.index
aagt-core/data/: audit_test_memory.index  audit_test_memory.jsonl  audit_test_risk.json  audit_test_store.index  audit_test_store.jsonl
aagt-core/examples/: deep_refactoring_demo.rs  file_store_usage.rs  qmd_memory_usage.rs  refactored_demo.rs  repro_risk_bug.rs  risk_management.rs  skill_loader_prototype.rs  strategy_pipeline.rs  test_dynamic_skills.rs  verify_audit_fixes.rs  verify_circuit_breaker.rs  verify_memory_isolation.rs  verify_resilience.rs  verify_sidecar.rs
aagt-core/proto/: sidecar.proto
aagt-core/src/: agent.rs  context.rs  error.rs  lib.rs  logging.rs  maintenance.rs  memory.rs  message.rs  multi_agent.rs  notifications.rs  pipeline.rs  prelude.rs  provider.rs  rag.rs  risk.rs  simulation.rs  skill.rs  strategy.rs  streaming.rs  tool.rs
aagt-core/src/agent/: cache.rs  context.rs  core.rs  memory.rs  mod.rs  multi_agent.rs  namespaced_memory.rs  personality.rs  provider.rs  scheduler.rs  session.rs  streaming.rs
aagt-core/src/agent/provider/: resilient.rs
aagt-core/src/bus/: message_bus.rs  mod.rs
aagt-core/src/capabilities/: sidecar.rs  sidecar_manager.rs
aagt-core/src/infra/: format.rs  logging.rs  maintenance.rs  mod.rs  notification.rs  notifications.rs  observable.rs  telegram.rs
aagt-core/src/knowledge/: mod.rs  rag.rs
aagt-core/src/knowledge/store/: file.rs  mod.rs
aagt-core/src/provider/: resilient.rs
aagt-core/src/risk/: checks.rs  circuit_breaker.rs
aagt-core/src/skill/: wasm.rs
aagt-core/src/skills/: mod.rs
aagt-core/src/skills/capabilities/: mod.rs
aagt-core/src/skills/runtime/: mod.rs  wasm.rs
aagt-core/src/skills/tool/: code_interpreter.rs  cron.rs  delegation.rs  memory.rs  mod.rs
aagt-core/src/store/: file.rs  mod.rs
aagt-core/src/tool/: code_interpreter.rs  memory.rs  mod.rs
aagt-core/src/trading/: mod.rs  pipeline.rs  risk.rs  simulation.rs  strategy.rs
aagt-core/src/trading/risk/: checks.rs  circuit_breaker.rs
aagt-core/tests/: concurrency.rs  delegation.rs  integration_tests.rs  knowledge_skills.rs  personality.rs  qmd_integration.rs  scheduler.rs  tiered_rag_tests.rs  verify_audit_fixes.rs  verify_fixes.rs  verify_memory_limits.rs  verify_risk_fix.rs  verify_tool_policy.rs  verify_wasm.rs
aagt-macros/: Cargo.toml
aagt-macros/src/: lib.rs
aagt-providers/: Cargo.toml
aagt-providers/examples/: basic_agent.rs  custom_tools.rs  groq_trading.rs  markdown_memory.rs  moltbook_agent.rs  moonshot_chat.rs  ollama_private.rs  production_tracing.rs  provider_benchmark.rs  repro_oom.rs  semantic_browser.rs  test_all_providers.rs  verify_sse_security.rs
aagt-providers/src/: anthropic.rs  deepseek.rs  gemini.rs  groq.rs  lib.rs  mock.rs  moonshot.rs  ollama.rs  openai.rs  openrouter.rs  provider_tests.rs  utils.rs
aagt-qmd/: Cargo.toml
aagt-qmd/examples/: hybrid_search_demo.rs  trading_knowledge_base.rs
aagt-qmd/src/: agent_memory.rs  chunker.rs  content_hash.rs  embedder.rs  error.rs  hybrid_search.rs  lib.rs  rrf.rs  store.rs  vector_store.rs  virtual_path.rs  watcher.rs
aagt-sidecar/: requirements.txt  sidecar.py  sidecar_pb2.py  sidecar_pb2_grpc.py
aagt-wasm-test-skill/: Cargo.toml
aagt-wasm-test-skill/src/: lib.rs
docs/: release_v0_3_0.md
examples/: auto_enable_default.rs  basic_agent.rs  custom_tools.rs  explicit_sidecar.rs  file_store_usage.rs  markdown_memory.rs  message_bus_telegram.rs  moltbook_agent.rs  mutual_exclusion.md  namespaced_memory_trading.rs  risk_management.rs  simple_file_store.rs  strategy_pipeline.rs  tracing_agent.rs
skills/solana_swap/: SKILL.md
skills/solana_swap/scripts/: swap.py
skills/test-wasm/: SKILL.md
skills/test-wasm/scripts/: test.wasm
