[workspace]
resolver = "2"
members = [
    "aagt-core",
    "aagt-macros", 
    "aagt-providers", "aagt-qmd",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/undead-undead/aagt"
keywords = ["ai", "agent", "trading", "llm", "framework"]
categories = ["science", "simulation", "asynchronous"]

[workspace.dependencies]
# Internal crates
aagt-core = { path = "aagt-core", version = "0.3.0" }
aagt-macros = { path = "aagt-macros", version = "0.3.0" }
aagt-providers = { path = "aagt-providers", version = "0.3.0" }
aagt-qmd = { path = "aagt-qmd", version = "0.3.0", default-features = false, features = ["fts"] }


# Async runtime
tokio = { version = "1.43", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Serialization  
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP
reqwest = { version = "0.12", features = ["json", "stream"] }
bytes = "1.9"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Utilities
uuid = { version = "1.12", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.1"
parking_lot = "0.12"
schemars = "0.8"
rayon = "1.10"
simd-json = "0.14"

# Proc macro
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing"] }

# Serialization
bincode = "1.3"
serde_yaml_ng = "0.10"
rust_decimal = { version = "1.36", features = ["serde-float"] }
rust_decimal_macros = "1.36"
tokio-cron-scheduler = "0.13"

# gRPC
tonic = "0.12"
prost = "0.13"
tonic-build = "0.12"

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
