[package]
name = "aagt-core"
description = "Core types and traits for the AAGT AI Agent framework"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../README.md"

[dependencies]
aagt-qmd = { workspace = true }
tokio = { workspace = true }

futures = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
anyhow.workspace = true
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
rayon = { workspace = true }
schemars = { workspace = true }
simd-json = { workspace = true }
serde_yaml_ng = { workspace = true }
bincode = "1.3"
fastrand = "2.3.0"
fs2 = "0.4.3"
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
console-subscriber = "0.5.0"
tonic = { workspace = true }
prost = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
which = "8.0.0"
tiktoken-rs = "0.9.1"

[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
tempfile = "3.24.0"
tokio-test = "0.4"
