[package]
name = "aagt-macros"
description = "Procedural macros for the AAGT AI Agent framework"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
schemars = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
# aagt-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
